fixing messages overflow

--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,12 @@ i {
 
 #lastMessage,
 #visibility {
+  width: 150px;
+  height: 10px;
+  overflow-x: hidden;
+  overflow-y: hidden;
   color: grey;
   font-size: 0.6rem;
-  flex-grow: 0;
 }
 #timeLastMessage {
   display: flex;
@@ -153,11 +156,13 @@ i {
 }
 
 .chatArea {
+  min-height: 86%;
   width: 100%;
   flex-grow: 1;
   background-image: url("../img/mine.jpg");
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
 }
 
 .message {
@@ -170,6 +175,10 @@ i {
   padding: 10px;
   border-radius: 11px;
   line-height: 15px;
+  word-break: break-all;
+}
+.message:last-of-type {
+  margin-bottom: 5px;
 }
 
 .messageSent {
@@ -185,7 +194,7 @@ i {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 6%;
+  min-height: 6%;
   width: 100%;
   background-color: #f3efeb;
 }
